# road-damage-detection

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  constraints.txt  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  security.yml
api/: main.py
apps/api/: main.py
apps/cli/: infer_video.py
apps/demo/: app.py
configs/: rdd2class.yaml
configs/eval/: default.yaml
configs/train/: baseline.yaml
datasets/: inspect_rdd2022.py  inspect_yolo_labels.py  make_2class_dataset.py  preview_classes.py  preview_crops.py
demo/: app.py
docs/: architecture.md  contributing.md  release_checklist.md  reproducibility.md
scripts/: download_rdd2022.ps1
src/: infer_video.py
src/road_damage/: __init__.py
src/road_damage/common/: config.py  constants.py  io.py
src/road_damage/inference/: api_schemas.py  postprocess.py  service.py
src/road_damage/modeling/: evaluate.py  metrics.py  predict.py  train.py
tests/integration/: test_api.py  test_service.py
tests/regression/: test_eval_floor.py  test_golden_inference.py
tests/regression/fixtures/: baseline_metrics.json
tests/unit/: test_constants.py  test_postprocess.py  test_validator.py
